terraform/manifests/nginx-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample
  labels:
    app: nginx-sample
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx-sample
