terraform/manifests/nginx-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.kapilkumaria.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-sample
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.kapilkumaria.com
      secretName: wildcard-kapilkumaria-com-tls
